--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/*.App {
   text-align: center;
-}
+}*/
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -11,8 +11,7 @@
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -30,4 +29,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+.image {
+  display: inline-block;
+  width: 150px;
+
+}
+.chekpoint{
+  align-items: center;
+  display:table-column-group;
 }
